# vtrwithap

utils/fasm/: CMakeLists.txt
utils/route_diag/: CMakeLists.txt
vpr/: CMakeLists.txt
vpr/src/DebugNew/: DebugNew.h  TracerNew.cpp  TracerNew.h
vpr/src/base/: SetupGrid.cpp  SetupGrid.h  clustered_netlist.cpp  clustered_netlist.h  read_netlist.cpp  vpr_api.cpp  vpr_types.h
vpr/src/pack/: cluster.cpp  cluster.h  cluster_placement.cpp  cluster_placement.h  cluster_router.cpp  output_clustering.cpp  output_clustering.h  pack.cpp  pack.h  prepack.cpp  prepack.h
vpr/src/ripple/: global.h  ripple_fpga_main.cpp  ripple_fpga_main.h
vpr/src/ripple/cong/: cong_est_bb.cpp  cong_est_bb.h  cong_gp.cpp  cong_gp.h
vpr/src/ripple/db/: db.cpp  db.h  db_bookshelf.cpp  group.h  instance.cpp  instance.h  net.cpp  net.h  site.cpp  site.h
vpr_work/: diffeq1.pre-vpr.net.post_routing  packing_pin_util.rpt  pre_pack.report_timing.setup.rpt  report_timing.hold.rpt  report_timing.setup.rpt
vpr_work/input_files/: diffeq1.pre-vpr.blif  k6_frac_N10_frac_chain_mem32K_40nm.xml  k6_frac_N10_frac_chain_mem32K_40nm_grid.xml  k6_frac_N10_frac_chain_mem32K_40nm_mode.xml
vpr_work2/input_files/: diffeq1.pre-vpr.blif
vtr_work/input_files/: cammandline  k6_frac_N10_frac_chain_mem32K_40nm.xml
vtr_work/temp/: 0_diffeq1.abc.blif  0_diffeq1.odin.blif  0_diffeq1.raw.abc.blif  diffeq1.abc.blif  diffeq1.net.post_routing  diffeq1.odin.blif  diffeq_paj_convert_ast.dot  net.dot  odin_config.xml  optimized.dot  output.txt  pre_pack.report_timing.setup.rpt  report_timing.setup.rpt
(+39 files in other folders)
